--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node bin/server.js",
     "build": "node ace build",
     "dev": "node ace serve --hmr",
-    "test": "nyc node ace test",
+    "test": "c8 node ace test",
     "lint": "eslint .",
     "format": "prettier --write .",
     "typecheck": "tsc --noEmit"
@@ -43,10 +43,13 @@
     "@swc/core": "1.10.1",
     "@types/luxon": "^3.4.2",
     "@types/node": "^22.10.2",
+    "c8": "^10.1.3",
     "eslint": "^9.17.0",
     "hot-hook": "^0.4.0",
     "pino-pretty": "^13.0.0",
     "prettier": "^3.4.2",
+    "source-map-support": "^0.5.21",
+    "ts-node": "^10.9.2",
     "ts-node-maintained": "^10.9.4",
     "typescript": "~5.7"
   },
@@ -58,7 +61,6 @@
     "@vinejs/vine": "^3.0.0",
     "better-sqlite3": "^11.8.0",
     "luxon": "^3.5.0",
-    "nyc": "^17.1.0",
     "reflect-metadata": "^0.2.2"
   },
   "hotHook": {
@@ -79,11 +81,9 @@
     }
   },
   "prettier": "@adonisjs/prettier-config",
-  "nyc": {
-    "reporter": [
-      "lcov"
-    ],
-    "report-dir": "coverage",
-    "all": true
+  "c8": {
+    "include": [
+      "app/**/*.ts"
+    ]
   }
 }
