--- a/package.json
+++ b/package.json
@@ -84,6 +84,10 @@
   "c8": {
     "include": [
       "app/**/*.ts"
+    ],
+    "exclude": [
+      "app/exceptions",
+      "app/middleware"
     ]
   }
 }
